test/programs/good/typechecker/new_2.lq
initQubit :: !(() -> Qbit)
initQubit _ = new @0

main :: Qbit
main = initQubit ()

