test/programs/bad/typechecker/new_3.lq
initQubit :: !(() -> Bit)
initQubit _ = new @0

